test: unit test admin orders report